# kramer-vp727-web-controller

./: GEMINI.md  README.md  config.py  config.yaml  connection.py  daemon.py  main.py  manual.txt  manual_layout.txt  pyproject.toml
static/: index.html
tests/: test_controller.py
