[project]
name = "kramer-727"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "pyyaml>=6.0.3",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
